# Gestor_Alojamentos

./: CMakeLists.txt  Doxyfile  README.md  estruturas.h  main.c
code/: estruturas.h  main.c
data/: edificios.csv  estudio_politicas.csv  estudios.csv  eventos.csv  pessoas.csv  politicas.csv
edificio/: edificio.c  edificio.h
edificio_linkedlist/: edificio_linkedlist.c  edificio_linkedlist.h
html/: annotated.html  billing_8h_source.html  branch__calendar_8h_source.html  branch__events_8h_source.html  buildings_8h_source.html  classes.html  date_8h_source.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_059298cb89e0c09281d7cd57477d40b0.html  dir_0b650bc4ed91c1de6581c9dcf6c79f7a.html  dir_11c3efd3296e1a2806304c58b370b81f.html  dir_26789c40c9bed475ad0c749303550b02.html  dir_2f0533e0aefda117f67db2059855d67d.html  dir_38f76342d6185ea81f692d6e01071b1b.html  dir_43507ccf2cb15a909096f09ac6fd9667.html  dir_493eaf7d678f160f8f0bd68bd5491c6f.html  dir_4baa9fbbfc6b0a2b6a29f45360fd772b.html  dir_4fb97b275c3d12222d7326147e8a4016.html  dir_5d8e536cd8e43f1462e5c113a98852b6.html  dir_6dea2e826ade0cd9acb022cf980d993c.html  dir_733dba071e03cb4b5c7134d1bb82332b.html  dir_9c23afc8ef5a9bf01ab783e9ef7f3ed9.html  dir_a9e8e81bd95b004961225ec84802ac51.html  dir_b28401b6dda7b82d3b5201a7a056359c.html  dir_ceaae8f37aca8914d0fd8635400d300d.html  dir_d4b7badc4879453153883b6c9debb75b.html  dir_e74ed8200cb2d268e55ecc59efe2d9f4.html  dir_f1b39dee39482bb236ae472b7feff8da.html  dir_ff0b6e9dd7eec71fb94ebbb117feeccf.html  enum_8h_source.html  files.html  history_8h_source.html  holidays_8h_source.html  index.html  location_8h_source.html  master__events_8h_source.html  people_8h_source.html  politics_8h_source.html  price_8h_source.html  read_8h_source.html  (+39 more)
(+103 files in other folders)
